tests/lean/explicit.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
  Imported 'Int'
  Assumed: f
  Assumed: module::g
@f : ∀ (A : Type), A → A → A
module::@g : ∀ (A : Type), A → A → A
  Assumed: h::1
h::1::explicit : ∀ (A B : Type), A → B → A
  Assumed: @h
  Assumed: h
explicit.lean:9:37: error: failed to mark implicit arguments for 'h', the frontend already has an object named '@h'
